Major UI update

--- a/index.html
+++ b/index.html
@@ -123,6 +123,15 @@
         background: #555555; 
       }
 
+      /* Hide scrollbar for mobile horizontal scroll */
+      .scrollbar-hide {
+        -ms-overflow-style: none;
+        scrollbar-width: none;
+      }
+      .scrollbar-hide::-webkit-scrollbar {
+        display: none;
+      }
+
       /* ROLE BADGE EFFECTS */
       
       /* 1. Gradient Flow (RGB/Holo) */
